fix(applications_overview): button-size jumping for smaller screens

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17,6 +17,18 @@ $deNBI_black: #000000;
 $openstackcolour: #ED1944;
 $simplevmcolour: #00ADEF;
 
+
+
+//media-query for applications-overview buttons
+
+@media (max-width: 1350px)
+{
+  .applicationActionsButton
+  {
+    display: none;
+  }
+}
+
 .navbar-brand-full
 {
   bottom:8px;
